--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    def navigation_version = '2.3.0-alpha04'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.billingclient:billing:2.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
@@ -41,6 +42,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.navigation:navigation-fragment:$navigation_version"
+    implementation "androidx.navigation:navigation-ui:$navigation_version"
     //noinspection GradleDependency
     implementation 'commons-net:commons-net:3.6'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
