--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,10 @@ android {
 
 dependencies {
     def navigation_version = '2.3.0-alpha05'
+
+    // I separated this as a single variable so the suggestion to update it won't show
     def commons_net_version = '3.6'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.billingclient:billing:2.2.0'
     implementation 'androidx.leanback:leanback:1.0.0'
@@ -45,7 +48,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$navigation_version"
     implementation "commons-net:commons-net:$commons_net_version"
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
@@ -55,10 +57,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:runner:1.3.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation "com.github.koushikcse:LoadingButton:1.5"
+
+    testImplementation 'junit:junit:4.13'
+
+    androidTestImplementation 'androidx.test:runner:1.3.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta01'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
