--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.aresid.happyapp">
 	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
-	<!-- <uses-permission android:name_with_placeholder="android.permission.GET_ACCOUNTS" /> -->
-	<uses-permission android:name="android.permission.CALL_PHONE"/>
-	<uses-permission android:name="android.permission.READ_PROFILE"/> <!-- <uses-permission android:name_with_placeholder="android.permission.READ_CONTACTS" /> -->
+	<uses-permission android:name = "android.permission.READ_PROFILE"/>
 	<uses-permission android:name="com.android.vending.BILLING"/>
 	
 	<uses-feature
@@ -18,6 +16,7 @@
 	<dist:module dist:instant="true"/>
 	
 	<application
+		android:name = ".application.HappyApplication"
 		android:allowBackup="true"
 		android:banner="@string/app_name"
 		android:fullBackupContent="@xml/backup_descriptor"
