--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:dist="http://schemas.android.com/apk/distribution"
-          package="com.aresid.happyapp">
-	<!-- To auto-complete the sign_in_email text field in the login form with the user's emails -->
-	<uses-permission android:name = "android.permission.READ_PROFILE"/>
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	package="com.aresid.happyapp"
+	>
+	
 	<uses-permission android:name="com.android.vending.BILLING"/>
 	
-	<uses-feature
-		android:name="android.software.leanback"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.touchscreen"
-		android:required="false"/>
-	
-	<dist:module dist:instant="true"/>
-	
 	<application
-		android:name = ".application.HappyApplication"
+		android:name=".application.HappyApplication"
 		android:allowBackup="true"
-		android:banner="@string/app_name"
 		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.HappyApp.Launcher">
+		android:theme="@style/Theme.HappyApp.Launcher"
+		>
 		<activity android:name="com.aresid.happyapp.activity.MainActivity"
 			>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW"/>
 			</intent-filter>
 		</activity>
-		<activity android:name="com.aresid.happyapp.activity.MainActivity2">
+		<activity
+			android:name="com.aresid.happyapp.activity.MainActivity2"
+			android:screenOrientation="portrait"
+			>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW"/>
 				<action android:name="android.intent.action.MAIN"/>
-				
-				<category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
 				
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".EntryActivity"
-			android:label = "@string/app_name"
+			android:label="@string/app_name"
 			>
 		</activity>
 	</application>
