--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,34 +40,71 @@ android {
 }
 
 dependencies {
-    def navigation_version = '2.3.0-alpha06'
-
-    // I separated this as a single variable so the suggestion to update it won't show
-    def commons_net_version = '3.6'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.billingclient:billing:2.2.0'
-    implementation 'androidx.leanback:leanback:1.0.0'
+
+    // I separated this as a single local variable so the suggestion to update it won't show
+    def commons_net_version = '3.6'
+
+    // Google Services
     implementation 'com.google.gms:google-services:4.3.3'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    // Glide todo: needed?
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // Fragment navigation
     implementation "androidx.navigation:navigation-fragment:$navigation_version"
     implementation "androidx.navigation:navigation-ui:$navigation_version"
+
+    // Commons-net used to get the online time from the Google server todo: needed?
     implementation "commons-net:commons-net:$commons_net_version"
+
+    // Coordinator layout
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+
+    // Appcompat
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    // Firebase
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-core:17.4.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+
+    // ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    // Legacy support
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Constraint layout
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Idk wtf todo
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Google Play Billing with KTX
+    implementation "com.android.billingclient:billing:$google_play_billing_version"
+    implementation "com.android.billingclient:billing-ktx:$google_play_billing_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
 
 
     testImplementation 'junit:junit:4.13'
