--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
+        room_version = '2.2.5'
+        google_play_billing_version = '2.2.0'
+        navigation_version = '2.3.0-alpha06'
+        version_coroutines = '1.0.1'
     }
     repositories {
         google()
