--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         room_version = '2.2.5'
         google_play_billing_version = '2.2.1'
         navigation_version = '2.3.0-beta01'
-        version_coroutines = '1.0.1'
+        coroutines_version = '1.3.4'
     }
     repositories {
         google()
