--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
-            debuggable = true
+            debuggable = false
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -46,9 +49,6 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    // I separated this as a single local variable so the suggestion to update it won't show
-    def commons_net_version = '3.6'
-
     // Google Services
     implementation 'com.google.gms:google-services:4.3.3'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
@@ -61,7 +61,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$navigation_version"
 
     // Commons-net used to get the online time from the Google server
-    implementation "commons-net:commons-net:$commons_net_version"
+    implementation "commons-net:commons-net:3.6"
 
     // Coordinator layout
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
@@ -71,11 +71,11 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.firebase:firebase-core:17.4.2'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
     // Material Design
-    implementation 'com.google.android.material:material:1.2.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 
     // ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
@@ -115,6 +115,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-rc01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc01'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     kapt "android.arch.persistence.room:compiler:1.1.1"
 }
